Example/readme.txt
MyConsole is a copy from the jolie Documentation.
The following is the line used for compiling and the error respons:
----------------------------------------------------------------------------------
javac -cp /home/tsr/Documents/JolieSourceMyRepo/Jolie/dist/jolie MyConsole.java

MyConsole.java:2: error: package jolie.runtime does not exist
import jolie.runtime.JavaService;
                    ^
MyConsole.java:4: error: cannot find symbol
public class MyConsole extends JavaService {
                               ^
  symbol: class JavaService
2 errors
-----------------------------------------------------------------------------------
